<resources>
    <string name="app_name">Storage Access Helper Demo</string>
    <string name="description_open_storage_settings">Open storage settings</string>
    <string name="storage_settings">Storage settings</string>
    <string name="full_storage_access">Has full storage access</string>
    <string name="reading_storage_access">Has storage reading access</string>
    <string name="writing_storage_access">Has storage writing access</string>
    <string name="no_storage_access">Has no storage access</string>
    <string name="request_read_access">Request reading access</string>
    <string name="request_write_access">Request writing access</string>
    <string name="request_full_access">Request full access</string>
    <string name="hint_dir_name">Dir name</string>
    <string name="overwrite_if_exists">Overwrite if exists</string>
    <string name="create_dir">Create dir</string>
    <string name="not_exists">does not exists</string>
    <string name="exists">exists</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="dir_already_exists">Dir already exists:\n%1$s</string>
    <string name="dir_was_created">Dir was created:\n%1$s</string>
    <string name="dir_was_not_created">Dir was NOT created:\n%1$s</string>
    <string name="full_access">Full access</string>
    <string name="writing_access">Writing access</string>
    <string name="read_access">Reading access</string>
    <string name="read_storage_dir">Прочитать /storage</string>
    <string name="listring_of_dir_returns_empty_result">Чтение \'%1$s\' вернуло пустой результат</string>
</resources>
<!--«»-->