<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<Button
    android:id="@+id/requestStorageReadAccessButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/request_read_access" />

<Button
    android:id="@+id/requestStorageWriteAccessButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/request_write_access" />

<Button
    android:id="@+id/requestStorageFullAccessButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/request_full_access" />

    <Button
        android:id="@+id/mkdirButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#42A5F5"
        android:text="@string/create_dir" />

    <EditText
        android:id="@+id/dirName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:hint="@string/hint_dir_name" />

    <CheckBox
        android:id="@+id/overwriteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/overwrite_if_exists" />

    <TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:padding="16dp"
    android:text="Состояние доступа к хранилищу" />

<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/appPropertiesButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="12dp"
    app:icon="@drawable/ic_storage_settings"
    android:text="@string/storage_settings"
    android:contentDescription="@string/description_open_storage_settings" />

</LinearLayout>